@@ -1,3 +1,6 @@
+04/23/2019
+- error handling when starting session
+
 03/18/2019
 - fixed accidental use of global variable err in revoke_tokens_on_logout;
   see #253, #254; thanks @arcivanov
